# nox

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
.github/workflows/: build.yml  format.yml  tidy.yml  unit-tests.yml
cmake/: common.cmake
docs/: CMakeLists.txt  Doxyfile.in
hooks/: pre-commit
include/nox/: log.h  version.h
sandbox/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  mainpage.dox
src/common/: CMakeLists.txt  logger.cpp  logger.h
tests/: CMakeLists.txt
tests/unit_tests/: CMakeLists.txt  logger_tests.cpp  main.cpp  test.cpp
tools/: ntl
tools/nox_tools/: copyright.py  format.py  git_utils.py  tidy.py  utils.py
